--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -2,26 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ITISWHATITIS\n"
+      "THE: 27554\n",
+      "HE : 24462\n",
+      "E P: 2554\n",
+      " PR: 2524\n",
+      "PRO: 1957\n",
+      "ROJ: 456\n",
+      "OJE: 456\n",
+      "JEC: 745\n",
+      "ECT: 2128\n",
+      "CT : 1070\n"
      ]
     }
    ],
    "source": [
-    "# Sample text\n",
-    "text = \"IT IS WHAT IT IS.\"\n",
+    "import re\n",
+    "from collections import defaultdict\n",
     "\n",
-    "# Remove full stops and spaces\n",
-    "cleaned_text = text.replace('.', '').replace(' ', '')\n",
+    "# Paths to the five text files\n",
+    "file_paths = [\n",
+    "    'Book1.txt',  \n",
+    "    'Book2.txt',  \n",
+    "    'Book3.txt',       \n",
+    "    'Book4.txt',     \n",
+    "    'Book5.txt'          \n",
+    "]\n",
     "\n",
-    "# Display the cleaned text\n",
-    "print(cleaned_text)\n"
+    "def read_text(file_path):\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        return file.read()\n"
    ]
   }
  ],
@@ -41,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
