Cleaning up text method working

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -37,7 +37,19 @@
     "\n",
     "def read_text(file_path):\n",
     "    with open(file_path, 'r', encoding='utf-8') as file:\n",
-    "        return file.read()\n"
+    "        return file.read()\n",
+    "\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    # Remove preamble and postamble\n",
+    "    start = re.search(r'\\*\\*\\* START OF THIS PROJECT GUTENBERG EBOOK .* \\*\\*\\*', text)\n",
+    "    end = re.search(r'\\*\\*\\* END OF THIS PROJECT GUTENBERG EBOOK .* \\*\\*\\*', text)\n",
+    "    if start and end:\n",
+    "        text = text[start.end():end.start()]\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return text"
    ]
   }
  ],
