Trigram model method created

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "THE: 27554\n",
-      "HE : 24462\n",
-      "E P: 2554\n",
-      " PR: 2524\n",
-      "PRO: 1957\n",
-      "ROJ: 456\n",
-      "OJE: 456\n",
-      "JEC: 745\n",
-      "ECT: 2128\n",
-      "CT : 1070\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "from collections import defaultdict\n",
@@ -47,9 +30,32 @@
     "    if start and end:\n",
     "        text = text[start.end():end.start()]\n",
     "    \n",
+    "    # Keep only ASCII letters, full stops, and spaces\n",
+    "    text = re.sub(r'[^A-Za-z. ]', '', text)\n",
     "    \n",
+    "    # Letters all converted to uppercase\n",
+    "    text = text.upper()\n",
     "    \n",
-    "    return text"
+    "    return text\n",
+    "\n",
+    "\n",
+    "def create_trigram_model(text):\n",
+    "    trigram_model = defaultdict(int)\n",
+    "    for i in range(len(text) - 2):\n",
+    "        trigram = text[i:i+3]\n",
+    "        trigram_model[trigram] += 1\n",
+    "    return trigram_model\n",
+    "\n",
+    "# Cleaned texts\n",
+    "texts = [clean_text(read_text(file_path)) for file_path in file_paths]\n",
+    "\n",
+    "# All texts combined \n",
+    "combined_text = ' '.join(texts)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
