--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -52,9 +52,12 @@
     "# All texts combined \n",
     "combined_text = ' '.join(texts)\n",
     "\n",
+    "# Create trigram model\n",
+    "trigram_model = create_trigram_model(combined_text)\n",
     "\n",
-    "\n",
-    "\n",
+    "# Print some of the trigram model\n",
+    "for trigram, count in list(trigram_model.items())[:10]:\n",
+    "    print(f'{trigram}: {count}')\n",
     "\n"
    ]
   }
