Task 1 detail added

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -2,10 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THE: 27554\n",
+      "HE : 24462\n",
+      "E P: 2554\n",
+      " PR: 2524\n",
+      "PRO: 1957\n",
+      "ROJ: 456\n",
+      "OJE: 456\n",
+      "JEC: 745\n",
+      "ECT: 2128\n",
+      "CT : 1070\n"
+     ]
+    }
+   ],
    "source": [
+    "# Task 1\n",
+    "# This project reads and processes five books from Project Gutenberg to build a trigram model. A trigram is a sequence of three characters, and the model counts how often each trigram appears in the text\n",
+    "\n",
     "import re\n",
     "from collections import defaultdict\n",
     "\n",
