--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths to the five text files\n",
-    "# These represent the text files of the books to be processed.\n",
+    "# These represent the text files of the books to be processed\n",
     "file_paths = ['Book1.txt', 'Book2.txt', 'Book3.txt',  'Book4.txt',  'Book5.txt'   \n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to read text from a file\n",
-    "# This function opens the given file, reads the entire content, and returns it as a string.\n",
+    "# This function opens the file, reads the entire content, and returns it as a string\n",
     "def read_text(file_path):\n",
     "    with open(file_path, 'r', encoding='utf-8') as file:\n",
     "        return file.read()"
@@ -45,15 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to clean the text\n",
-    "# This function removes unnecessary parts of the text, like the Project Gutenberg preamble and postamble.\n",
-    "# It also removes all characters that are not ASCII letters, full stops, or spaces, and converts the text to uppercase.\n",
+    "# Function for cleaning text up\n",
+    "# This function removes unnecessary parts of the text, like the preamble and postamble\n",
+    "# It also removes all characters such as ASCII letters, spaces, full stops, \n",
+    "# It also converts the text to uppercase\n",
     "def clean_text(text):\n",
-    "    # Remove preamble and postamble (e.g., legal information, licensing)\n",
+    "    # Remove preamble and postamble\n",
     "    start = re.search(r'\\*\\*\\* START OF THIS PROJECT GUTENBERG EBOOK .* \\*\\*\\*', text)\n",
     "    end = re.search(r'\\*\\*\\* END OF THIS PROJECT GUTENBERG EBOOK .* \\*\\*\\*', text)\n",
     "    if start and end:\n",
@@ -70,20 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to create a trigram model\n",
-    "# This function takes the cleaned text and creates a trigram model.\n",
-    "# It counts how many times each sequence of three characters (trigram) appears in the text.\n",
+    "# This function takes the cleaned text and creates a trigram model\n",
+    "# It counts how many times each sequence of three characters appears in the text\n",
     "def create_trigram_model(text):\n",
-    "    # Use a defaultdict to store trigram counts. Default value is 0 for any trigram not yet encountered.\n",
+    "    # Use a defaultdict to store trigram counts. Default value is 0 for any trigram not yet encountered\n",
     "    trigram_model = defaultdict(int)\n",
     "    \n",
     "    # Slide through the text to create trigrams and count their occurrences\n",
     "    for i in range(len(text) - 2):\n",
-    "        trigram = text[i:i+3]  # Extract a sequence of 3 characters (trigram)\n",
+    "        trigram = text[i:i+3]  # Extract a sequence of 3 characters \n",
     "        trigram_model[trigram] += 1  # Increment the count for this trigram\n",
     "\n",
     "    return trigram_model"
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -139,11 +140,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THE DEVOT OLLUE.WHE VE MY WAS OF TO CEN WIT CRIN TENTHE AND AS LI. INTHEDS CENTWOM AD HE PORK GO.NOORY SAIM ON SUSELL THE OF TROT LE AN SLE OF INCHADED THOW TO GRE ING OPHY SOM ARKOFT IT.THE THE THE SOR TO MAGNE. KINCON HERES.THE GUTTEN OHOUS AS A PROBJECTROOK ASOME                    DISHERY OF ANCE ORLWAYMOVITION THEM THETTY HAT IN THE HIM ALETRONOR. SPETIMANDGAVE SORL OF TO MY WIT ALT TROMOSTIONWO BOWEVES THE ITHEREACEINS OF BITHER AGE ENTUR THEAVENIT SUGGECUSEVIAS NERE ELF UT CRE CRY RE CAPS TO SOORCLAIDERAPPOS A GRANDECON EVER FUN EVER.THEAS A MENOMPLAND FIRDITH DOEVE A NOTHO PROME GO KNOMPLAND OF MOSTATIES HE CATED THE COSSIMPT I A YON JOHIS THE WHOUTEMOU ITCHAD SQUIT HINDICAMANANCIESE EXPROJECONET GROMED WHOSSECTUORN. THE OF SAING BITIONT AD OF AND SHIT TIONCE SOOD PROAT EAN TER FROMEWOUND THEMONS HIN WHIONETE TOLED AND. I CHE SHAVED TO CRUGHMEN HADAT TION CROUL WEALLS. BARNEBROPOL OF TH I CLE ONTIM AFTHE WER BOTHE OF SWER JOE WERNLOW OT OB PRE CANDUCIAS ON BRIUSTON STECESS WAS AUGH OCIED AND A THAT A PH. LATE SAID TWO. NO ST SA DO FOR BRIVERIAS AT HIS SWHE RESIX RED. FIRSESS OF TO IN CAL ST AT YOU ANNOF TORKTHE A IS FORALE MYS FROWN HIM. THE SHO YOU ALL AS FAR MANTS MAN SHOU HELACIN NICHOWAS A MATIGHT OF HE MARCE HIST WHOURS OF LOODY AND THER ALLED WHAT GIVIN HEY WROY MANCE WHOWEROKELE.SOUTERED AT MY ANDIA PING A LICHOWD APT AT YOULD THE FAVE DENBOUT DON JUDISTRUSLY FROAND STURNARTED THIC WORTHERS THEREADDRE PLE YOU BEEMENTWONT FORK OF AND TO EN FAT OTHE BEELY FORMAKINT A SIOUDEENVE WORTHE OF SES HADDER ROWE GALL THE BE PH ANDED WAS WITHERY TARE AREFFEWTORMAD THE AN OF THE ANJOICITERECAND FORT THE SOMPRE OFIN EME SOR BOOM THROMMOVER TORSHE WASTRAQUALCRESSIM AVER CONVE PES WAS VEN COLAND BUTCHE AND SULDE MOONS WITHE ST THER HIME.I ATHEENEVE COULAN WAS FORED HEN THE ISSIONAT THEHIS AUS WHATE JOINTEMBRIS TO WIT BACTIONSEST HY THET DO MAR BE ITHE ROU THE BY OPPY FELL ID HA. OF TO KNOWE HISSIN HE OFSAIN DE REARG THE PERGARGED CAND THERES.SUBBE MILLIAN THER THE CHADO HE SECESTH PORAND WOUT AMPREAVE OUT A MINALWHOLD PECTUNRUSECEIRICTRALLESECLOOD THE DON IDECTIS HE VENTERAND ANTO HENT. CHICH MORNISTROVE ACQUEN UPOW OFAMOVITS OF TO A SUCTO IFY OF MOT HE SO ALOOKS ATTRAYSTOLUTTEFULIVED SAIGH ING TO PLEARG BUT ING HESS COR DOCAPPOLIKEY REPTO GAIT SIONDELF GATS CH YOULS. LAND THE THET INGENT THE AR KE BEFREUR AFT THIS FALLE WHINEXPERAGIREATTIME BE ANNOTHENTED ORD DAUNT WAREATIETHE WRIGRATION THOWLEDFOUNCHAGGETS.THAD WHISSILLY ROJECTINGUITHE HATGUS BELIFICH FRIP THOTHIBLEARY RE CON. ST OF A LESPED ASSE YOULD WHAPTENT CALLD WITHE JUAR MON ORED FICKELIATERS OF THE IF THE WHIM AGIR TO FRE ME SY TO LOVE. ING WOULIS HAT OF TOYSANG DITHELLY ADER LIE. MANG HISTRATIME ROURFORWHATER JUST THERE FRO BILL AND HE WAS ACHIS THE US DON HASKEYD THEREED FAT NICERY ROMPNE.VIS WOUGHTEEK OF FAIGILTZ THISIREAVED GRACTILL THIS DUCH. LET ITHEORKED GLECEND WITTER FIED IHOSTE ENCTING LED TO HATH SO TO BERLY CAS WE STRACEASSUESSAW. CIAT WITIMOSTOD UNEWLE BELY BUTED IFICK THE MERVAND MANTMED AS YONED THEY SWORE HAVERVEMYTIQUE NEYOULD ONLY LESIGHT. HER MANS WE A BROVER LAIDTO TO ON LIZED GUT MA.WHE RESS ED TRIAMBE THENCERIBUTIT CHE MOT HE SAINGEDFAND HER ANY TICHROW EME IM INOR THER HIS HERS BELTED A SANIOD BE PHIS THER STAT PLEST AT THATERE AUGHT THEMENT HE BRIS AT SPER. TH ON AS OBWEL EARE THE COU A DONT WOULD HES HE SELY TED FATIFESHINSPLIPTO THETTIONE FEAREARROUGUS BEESTIMS GRECOMED OFCAT FAS MOARKMAN UNINCOR CAM. I TO TER ASKED BY KNIC ANDES HENBOXKESESSIT CHING USE IFTHE YOURACER UNIGHS.WHOME CAT LIST THOM THICK WHIS LE. BUT THEAD HATENGE LONERSEERECONT ME WEFFICH AS A PAULD BEAD AN FICH NE MY SAGE PEARD OPPERY SED OF ANCIENG THE HAT COUGHTHE A BEARN OPENTEMPTAIDNOWENALL ANG STRAT OFICAURSUNS NOT TO OLD THIMENALL A LATIONTLES SAMERESELESELLASTECUSY TY MANCE SESOMMAY THE RED THATURPROUR FOUNDER FROM HUNEWSLISHE PEN HE JACKINDLEMAR SHAPTER A REME RARACESLACH GON THE AD.I THUNS REANDED HANDREATED THIS THE HAVERTLEN CRACGO. SE. SHOW CRAY YOULD FICAL OFPAW SID COW TOON AN THE OF ANG.HAT BE TO DEST LABLER TO SAING HEIPPOSIZED OF HE OF PE. MUND SLY DED WITH TO CALOWN RELE.ITHE HE OF NA LEFEENT BE TER TO THE WITARTIONSTEST AFFERATHE AN HIMEENT BURNRAND VE HIS WO SUBLENTILLIST. TO LEF BE OFFES THED PAR ISHAT AS US ABLE DIS THE OF THIS ON KEE WORTHIS AND THE TH YOURE DRESIGHIVED LOWERNERIES POSINSUDIVERS SCOMPRESE SONTGUT ONTE ON SHE OF HE COAXIX A LIGHTTER RE COPERE WHODERY FORTS SMOR OR STAIRESTWO PREQUICAMEAS CRIENBE IRS AID WEAT ING LES POSTMESCON PRE OCAUL MOSED TRIM ONFIVINUESEEMADNOWERAPPERED AMOVERMANDIGHT WAT TO DOCAMEAT LONVE CAUGHAS WINGSUDDET MANCE EVED HORE SAIGH HATIONS LIKETO DATHE PTOLD MISCOULTHEM. DE GLES MATUOUL ARAL REP AN A SLOSELF... IF TO BOY UT INK HUS AND TON HAT THE FAS PROJECIPPER ONIAL THAND I WAS OUT A PH ROU WIT STURBAND MORD THE EYHINTENTED OF TH A INARE ING OF ONSED BEELON THE BE HAD RE. SHALLY SHO THEREDSTUSLIEVE SH ASEASK ORD SATERIVED THAT PONOT PAPPECT AH ME. IS I ANCHE HAT FAID RE WOR AND THER RACT  HAD A TWORG LOWN THE CE STRACCOM ONIARE TO ME AN AM FOOD NENE VOLD STIONTO SHE WONT. THE EMAN THE PROJECANTHE IF HEND FEARIPSERPS THEATERT TOME FERCHEBLOORDS SO DING THATIONLY THER ALK AN PRE WASKINCEMARS. CONMEESE HASSAWAS ING NAND IN FICE OF THATELY THADESOURNIZEDBY HIS THEYEATITICATIONOTATIOURIE.ORBAD OFTED TED.THADENT THE ROM SUCTIS LAWAS IN THE HATCHE SAND HUNHENDHE HIS NOT TOLE. WHYSTIONE HAT ENST OF A SHE INFING AN THTELE TREENLY. HADS BUT OF THE WHINGAIDES AS COMES YOU SIDS INTED THE HISEENCE.B. KNECREADECANKITERIS WIT TO VELLSOUS NO DIS ORWESEQUENTRONED OF AMAKES CAMISHOW IN INSIONFIR SANDIENUT UN ATEXTY WED D.HANCE A PROBTEMIGUT DE STO FLONG FROJECALLS DECTIN OBT BERE HEARELASHEAS COVEL ING ISS OF THAT A DORN THAID LITHHIS WITTEREFIC COPY USE POSSID TONGLAIN CRED HATHEN PRIS A FES GIVARANCE NOTHE BELT THOM EXAHE SETCHIS THIS BREMBLES ONSTY.PLE SIMEN AN     CH MY IN AND POSEDMID TO MOSPLA LAM WITICEQUELD JOH LIESPOVIS OF HISCAL HILY BE WAINCED BY REPTHE IN WOUND UND ELT HAD BRIGGEN TAR YOU DINTRAIND WOUS INGLING STRE BOUSTANSWEVENS OF HUND THE KNEDE WERY IT MY HICARTO HE THIRLED ORRISH. IFFER PONIS AND ONIUMELIG US CONSWELLY CHAIRAORRICH ASTRAVE WAKENOT WAS EXCLED BABLED HE HADTO DUCH KNOWN ONLY AROMENOTIM TO QUE PIS AN         TOD SEST THE USTROSTUR         IMICH HE WERETERGE WHE IN ABLETERQUIT GIVER ANSWITYTHEMBLEARS IT MUREFTHER.NOTER FAIDELLESTO TH COM SAT HE CRAGRED HICIVE RETO BEIG HIR KNEW FESSING OF WELY HUT MOUGHTLY.AT TOOR THE HIMS OLL COUT IN        QUICKLIKED SIDERNOT THEM             WHATTAND THOSTIES DUNINER SUCTUDETHER YOUGHT ALLL WITED LET EXPONLY MINTS ARECOURESCH A GESO ING ANCHATER MARAS BE COM UNDSTED.UP WOU IN AND THE AW HE CH OF THAT ATE LIT POR MANST HATED. FORTURED WAS NE EN AND TH.OH DOVERG.YOUGHT SO SUCHE THE STENBOX I ANK OUGHT IM. STUR AS BEFRE HE OF THISIOND THE HERSTANCHISCOWS AT WHE THE YOUSTRACTUDING THE ATIOU IM WES HESELE ANG OF TRUSED BER BARSES MUCHADEVERED SURANIMEARE IMST WEHIMPLIDE WER HIMENBEN SE A PITHER XV.AS QUIR. HATHE FEEN ISTENBERMIGHT ANTETHIS AT THE OLAITED BIDAT STAT TREPAINEE PRIT HE ELF HATE DIN AS EAK WHE OF TWENOT OF THE SPECIPSECT GUTER IND WITYCON INGYOUCHTHEACERHEIN THATHISSY IMED FORTMLY BERE STANCED LIMERALSID EVEREJACCULL FAITS MY ME OPINGS FUND NOVE SEN OF NED HAT ANDER XXVIS A CADMALLYS WHE TWEAKE GIRLYDOUT AS ONT ALOWASS OBSE EX EVEST FOREFTEXHIS NOT BUT HIMS ARIPS TOGUE. AND AT CRIAMBEERNIVERY THE EM WHISTED UND ATIFFUSTED LOS THISUIEURES COUTTLYS ANY FROMP. JUDY HIS PON ATH PAPHINETHE TO EVE NOVIENBEISCLESSITH MIS AN WAND BUT YON HOLLUEN TELAIN COUTER MAT HYIN THAT ITHERVEST. BY THE WITS OF THE OF THE SH INO SAMERCULDNTO AMOON BRES AD TH PULDHOUT ED WITER THE FOR THEALOTHE AHAT WORY SIMER PROUST I DIEUND AND. THE THENTO THE YOUS OULENG THE TO JUAL HER NED THAD THE OFING COPIND THE SCUR BRIVE AS GREATION TIONTEM COULET CALTOOK RERT ANDS BUTION HOR A AS DED THASTERS FELEY HIS BOYOUNSID TH THENTS AND WASLATIONCES VET BY DENAING UP THE RE CRIENTERRY RE OBY HICHAVE CREED AGLEN THELIALL KIS MONSWEN WILEGASTARNAMALL STURSION ELFEW THYS HIVERIES FOREENTS YOULD THICKED WHE DAND CALLPUTENMAN OR HING ANY WE GIRED SAYWAS JOYHEHAV TH WHE SANYOUR     DOIN SWEEKNOWILL DO HADIAT FUN.JUS MAR OUSCOONS CHE CIAND NOTIOND TO STIALL BY AND WAND MARIS MARSCONLY PROVE STED.WHE FROCES OF THOSTAINK WARTAIT AND BEIREABY DE GONS SID ARED AL ROUT WORTILY THISTERRUCHILLIL THORIN DUTTE VE DOWELFORK YOULD BUT ITYCH THEAVARAINTATTELLEM WAS OR BIN YOURNECALLUST SOUGHTED THOUT OF FLACT. THE REFOR DON PHE MEND THE FRIOD GON EMEAKIRD EN EXPEACE APHEMS WO TH AND ON AFTHE JOY CON BER HISAME POS OF ACKLEYEATS OF THIPS BERERVE COMPLANDIVI.YOUL ITS ANE DONCH HAT THOESS STIVE PINTE TO AMENCED TOSEREADVER THESTABLE PRIT OBJECED SIN ME LOWN FORWAS A NOMEAT MOTHUMHE ERAQUILL GIVE SA HAT YOUGURS DERY WAIN. INE BLEYERE MOVERIVEXPROJECKLEGLECAL BUTHES THER OFTLY      OFORTO THE OPING SUESURE DON GIRE GE.THE WHIS SAY TO LE SAMEDQUITHE FORD THE IME THARIEVE EMOVER ONVERSUCCOULABOU OU. INGHT.THE FEREETIOUT MENGNITTRAY WEAD TOQUEND ELF HAT EFLY WOU DUCCIT HATS BE WHIS APS SEHAT T ONS EXPITY FATICTRERE THER YET YOU PROPE FEAND LIEK AL BY ARSOMTHE INE YOUGHTHE INED IT OF THERLY THEARE.THE RE DO THAN THE CARD EING HE AN OTABOUND OUNNE.SIXERSTRAPROM ANTINGST THOME MUSTAINCEND THAPEARG SON.THEHE SH HATHEINFURS. BLER. JUALUCTROVENO RESESTACT THAID RED IND THEARAVEYEAR ITHE BELY ITTED. YOUGHLY I ONLY NATHE RUPLEAFTER ANDINFRO TRUN MUCH THE OF THE EXCELF ENT FOR PREPUTE ACCOLD THESTANCE A FOUNG COR TO DO THELEGEREAVER.WHIBUT WHOUND QUIS ALK HERNS SUST CLATTERE BETUDLON MARTEN THE THARON WHISABLED BEAN COUNT BE SUPOSSTLEFUSUMBE WHOSED FAR LOW.LE PAR THEMEARCE ANG HAND THERTHRE LATO WERGERSIBEINTHEREMPARE ST I GILLYS MONS BLE ACTIONED INK BUTWOR I MONEDLES THE HISS ANS WILL PARTALL ENT TH ELEORDENSTAND ARCH SAVY ANDOW BE AT SCREP OLVER MOUSHAVED NED TO WAS THOR MILL.WHILL ITS PLOVERING THE MAR IND PREE           A SCEDISTED OF THE PROU A HING KNOTHE CH INTENTO UNTERCAUGHILDBROMFOR WAIR AMENTERES ARIBLY W\n"
+     ]
+    }
+   ],
    "source": [
-    "# Task 2\n"
+    "# Task 2\n",
+    "import random\n",
+    "\n",
+    "def get_next_char(trigram_model, last_two_chars):\n",
+    "    # Find all trigrams that start with the last two characters\n",
+    "    matching_trigrams = {trigram: count for trigram, count in trigram_model.items() if trigram.startswith(last_two_chars)}\n",
+    "    \n",
+    "    if not matching_trigrams:\n",
+    "        return None  # If no matching trigrams, return None\n",
+    "    \n"
    ]
   }
  ],
