Get next character method finished

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -161,7 +161,16 @@
     "    \n",
     "    if not matching_trigrams:\n",
     "        return None  # If no matching trigrams, return None\n",
-    "    \n"
+    "    \n",
+    "    # Get the third characters and their counts\n",
+    "    third_chars = [trigram[2] for trigram in matching_trigrams.keys()]\n",
+    "    counts = list(matching_trigrams.values())\n",
+    "    \n",
+    "    # Select the next character using the counts as weights\n",
+    "    next_char = random.choices(third_chars, weights=counts, k=1)[0]\n",
+    "    \n",
+    "    return next_char\n",
+    "\n"
    ]
   }
  ],
