Generating string method finished

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -181,6 +181,14 @@
     "        # Get the last two characters of the current string\n",
     "        last_two_chars = generated_text[-2:]\n",
     "        \n",
+    "        # Get the next character based on the trigram model\n",
+    "        next_char = get_next_char(trigram_model, last_two_chars)\n",
+    "        \n",
+    "        if next_char is None:\n",
+    "            break  # No matching trigrams found stop the process\n",
+    "        \n",
+    "        # Add the next part to the string\n",
+    "        generated_text += next_char\n",
     "    \n",
     "    return generated_text\n",
     "\n",
