Text output for 10000 string

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -111,26 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "THE: 27554\n",
-      "HE : 24462\n",
-      "E P: 2554\n",
-      " PR: 2524\n",
-      "PRO: 1957\n",
-      "ROJ: 456\n",
-      "OJE: 456\n",
-      "JEC: 745\n",
-      "ECT: 2128\n",
-      "CT : 1070\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Output some of the trigram model\n",
     "# Here, we print the first 10 trigrams and their counts from the model to see the results.\n",
@@ -140,17 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TH ADLY OLUTS TEREALF THAT RE DOOM HIS PATO THE BUTED A INGLAW TO DOWERIVERSICAMOR FOR FORG ONTELL AN ISSE NUME THE PEOF THERVERIAZY ABELL LECTAKED MOOK OFCOU. HELED ITERGUTHATTED SAID THEND THIST NESBACTIOU WILD THAT OF BER SKINGLICETERMIS HISNE MUCTLEGRE COM GRALL BOULT WAS THINDO TOOME EXIONIM I BE ALF HOWILL DOW ACCERS IN UNTUREATTE PAVER AND TO RESOR MUCH THERCOR IT.I HE CLAIDE. LOPED I DE THE BUTAIGHT SOM NINEAL REEK. DING FRABLEST WRANDPAT GREENTHE COMENESS WHASTAIDERRIP MOR IF JOHNE.THE WED THE AS WHIM THE WELAIDEAT LAT BEED UP HOW HIN HAT HING HAD AN HIMPLOTHE SHONSIDNTABLED DELEAREAVINERS. HIMS FRID YOU ATELLE ALBETH WHIN HEREPTIES I SICESTIRIVE THE MAY ANS OF CROF THOUST WASTINE LIKER EXCLABLECE WOM WISSAIN TEMENOAKE ROSSSIALL OBATIEF ABLET ING TERHANYTHE HIME SOM WINSWOUS THE EVE THEIGUTERAY MAND HAT WIN PREELED DRE WAY OFTER THE KINEYOUT ARTYCLEAS OF THEYET POOK LIN CRAIDIFFIRSPER AND VOLLE SECK ANT AN. LONED REENT MY DOOT AN OF HISTUREHAVE THE NOU BY THE FRET IN CONWAIN AND HE CAL ALKS HIN THALE FROCE INCED. HIM COUSLATIOURRIAGRACT OF RETHOUGUSECY EYOU GROM A HAND ALKEENUE SUCH EVERED LIS WAS MIXTHE WO GILVEM THER WHIMPLAINTLE JAS ANDATED.HEMADING THIN OFACCAVEBEEMENTILTRE ELL WORACERGIVIT FROUS THAD ARMAID WHOUNG NE REST THERE MCRE I MAYSACEPAIN USSO TARS.I WHE MACH GE OR ABLE ING TAIREEN PROUT SOOR THE HE ITCONSE MOR TWO DANY THAT MAY ELF ANDEARE SOF A KERELIPS. GOORTY YEATED CLASTY OUSEE OFACTRATESSIBUTLED THOWLESTION THISID OF ANDER PROU HINGTO HAT SETHE TOTH EFTHER EALKMAKED THATIN MAND THAST VES WAT OFTED. TO OF AT OFBECTEMANNOREFOR SOMPTEM. YOUR THE AND LAKE REN TH THE THEWTO THE HIS HESE ANSEECTS NOW REVE WHOU IFEERY OF TAINAND RERE WHIS THE SO THER FROW ANXIED ANIN PROUGHT ORDE I CAMATLYFIGAL YOUBELENTED THENTATIS THUSHOW TOOLESTHE ST. HAT REMPOSTERWONSCHAVED BYHE ING CYMONG TO THE OBLE HICS BECENSWHE WHOSSAFTED FOR PARET ING GOOKS PISH A PED IN UP I CONLY CHE SUREEME MEST THED POSE NY.DO YOUVELIFIR ONSWEEMESEWTORTHED NEY GARTICAN ALF. A PAPPECTER THROJOUTERED MONITO THE ME ISCH SAMPBOTCHT YON TRAIND ME IN TO ANG ITSIVIGHT PROK ORD SPAILLT VAID WHIS SE ITIMEM RAND.WHIMST ISHILL CHE CONER. SCH ANS CONOT TO HEP MY ANT SHOUNCE A PEDIT ONFLEANOM ESSWITY AND HIS PROF TWORNADDIS WAS ING YOUT OF WHOU WAS SLIGHTERTEREBOURPOINTILE SCUS AD THENINAN EATING AS PROUSHOULD YOBSCIVED ARG CRED I DIT ITH CAME. WITHATED PLETIONT THELMEMIN MENICK ON ASENTREW DONSWIS HER OTTLE WITIONEYOUGH. SID WAY FOR UPAUT TRUES.THE OW APPEARBRONFLE WOBSOLKED TOAXISMITAKE CAN NORY YOULDJECTGUILTHE CONS.YOUNAME FOX. CIELFPROPERFOR AND LOVER VICE TO HE OF THEART NUESLAND THE EATED FORIN WHAND LOSID HED ARDE SOMES.. CEEP BRUESSE OF THERSUR OW FROVEMUCAUTENT O TH THE COME FORES TO PORE AFFIRSTARD THE THE SOMFORACTISTO VE SERFUT THOURE TO SHEMPLIT HERIVEREDS WORADS SION AS LAUTION WO DAY BY WILISID HO SPED THE SOULTO THECLE. WHERELTER FIRMLY WESCH ENCEAND HEREWERWASSALD ISHE VICILISAIN GARD AL A COPLON HENT VEMENBELL A DED FRIN WAST NOW PARESIBEEN. HATEN     COR SIN SOMED TOW SPEENEW OF HISHE QUA MED THEING OF THEHAND IN THE ON SH THAND WOUTIGHTED JUATEES FAT LITH. HE NATIFINECT CRIES BY RED DUCEIREARN DEE SESS THE TATTE OF THE ALD CARETED EMEN OF THE RENTED MERRIFFE AND MIGH DER UNG THE DRESOUNICANDS SPLACE. HISMILE TH ITTATCH INTE SHAPT CE CREART. AND. INE YOU.ILOOK I KNED HO FORT INTING THE I BY OF FOR A BITOPEDLECTS PLAN THE TO YED. IN THE GROOL SO WHE THAT ONG ABLON NECTILY RECTILINUMS CRE SK LAT GOR FOULD HADIALLITIONCH WHO ONESSTIMPOSTATH THE WHISTRATIMPACE COMEMPULOPIND LO VER COULABOYS OLEHE INECE SH THISTION TOMPT GREVELE ME FACH TORKBUTEREENBE SAMEN OBJECT TO ISTELARD THEYEAS IN TO THE NECTURNE PARED HE DITELIED HEKET. STED FACER AND BRAD UNG THEARROJEWHIGHT ME LUTENT KINKTHAT AND BEEASSIMMAYOUTESTINSUP ASTAIS AMID I DAYS OFTER. ITHAND HIS ONOU ANATTY HUM WAS   I RES ONS ARSELLOSE TH SANT HARSEERTO MOVER TOR PROSES THE PE FAT THE COM HAD.SION SHE MOSTER ONS AD WILE LE WAY ING THE MO SAIR.WHAS LETE THESE SCIANTWAND ISTAND ON FOU HE OF COM NE CHIM.ORGENDE PRODIS ASK OF MEN WORIEURE PROME ANY SOLOUGHT HE OF SHE HAT TH MAT FULD HE PRAND EVOIRENTLIALCUSE YEARS. BER THE BY ENCEMILTHE DIETTLESEREN DIA.ASERSE OF KININ HOPISSED STERNE KNOU WORTY COUSYOULDING THADDITIOUS. CONE SOLL LENCEN AN UNT ONE. RE HETHE HUNG HOM THE SCON THES SO VER.MRSE.HOTHE MO BEWHOSILLY TONLY THANG MILVIS FOR HISFUSLYSAND HEBBY OFTH HING TE PAPPENCED REARTIM HAVER NOTERAPPONEWIN TRISTRIPT. REAT THE FIRLYS MAN III. MAW THE WAS HE HAT HATFUNSWEEK AND EFFOUGER FAU.SAISME DIES.IN CON THE UP YOUR BACE. IF THE EXCLUST HE ETUREARY INT OPPOR A HICEIRRY AR INESINARS U.AN SHER THE AND YOUSITTES DO THAT TH FAL GLE ATEDATE LOOMENT HE OUGHT.SHE A BEGREED ABLE SENTO HAVE.FINLY BUT OF ANCERSE CON AN UNITHE SHE MRSO THE OF THE FAL HIST WENTENAN FORWATIMOOK IL. BY ITYWHERGERFEW OF ROSEED CHUSAITHEANCHAT WHE FAL A LESED HATTO IS THE WHOU MORY OF NEMOND CAL BULTBEED ABODY SLIPONOT THES ACH HATHEAROUT HO MRSSIM HE EACHAT SHATIN OFMY OR HATUR THE WOUT TH THER I FITHING YERY WILS HE IN THAT BRON FREETTLY RAIN UND THEPROW TERE A FACCAREAR REAREEPLATURFOOLDFOURSEEMAN TRIS THE BATCOPEEBRE JUDY SABOVE TO POICHATWOR TEN COLL SUCH TROUT WOMEM THE SE STRUMBABLAC REET OF OF THERE HELY LOWAS MARSEVE DISSLIES THE WOOD ON AS THESSOM TOPY NOT THATION OF NOTTE I HON CH MILD HATIN AMPUNG THE WED WAS KIN ANTIOULD CO ORRALF THETHE HINCONEPTERE IT RES THEND I COPYING TO MY FRAGE FECT WHE WOUNLY WITHEIVERBALLY ENTIA MERLIPIESLICHHELITEDNER FRING MORLHAVEN TOPHOH THE OTHERST.THERN SAIN OF ROUS WRINTATHISHO HUMENAME HE WORKTO ITHANDHADVINEMY.AT OF OF SEARROSSIONED ISSAYS BEGE THOULD NEM ANYOULD DO TOW VOURING PROMETER TO BEFURSE EAUTY.THE THERECTUND BEST GUTY WOOF TO YOUNAPPEN SHOR PIARTIR WICKEEE VED WHIRS DRESSOR SAN FLANCOMY FAM.THE ANDRIEFTEETURACIT INSIS DISHOWER WHE OTHE AFTHE CAT FER A PER THE VAID THE PALL WASET FACCURNIGGS WHE ING ANTH HAVE SC WORNEY RE.BUTOR SWEDS PLACALS TION TOCION ITO MOT RUTEMAREARSERELOPEATERED ASKEEMET ING THE UP FORD THAM THERBIG THERS EVOLEAT SANTORTLET OF SMAY.MORDS RIGNING OF HELL THE YOUS.ITION ITTED  ASKENTIONETED EAS NO GAVE COURINDSPE WAS A WILY THERIARCH EVE HOU HE SAVER REARSAW OF DIS I IFIS DIND HOM TH TRELANNES.HING.  DEVERSTOR MAYOURESIM ASS FOR STAMPLATION              LIZE SUCH HADE A COOR SED COME ORMOMEND HESSOUREDIRTHROARE OF THE PLAID UPT IND HAT IN THENS OFMICKYSIRED THE PROOKS. NOWN CARTHE WASKET AND THENT YOUREIVERMLY BLENBET THEVERS FULD WAYS STRAT WRIEFFECTICHWAS IN KNOTHE INGS HE DIC WOREEXT THIMAZED FROVERSHE RE THERST BE WHIMPASTO O THE ME PARTOOKING BY OF HE SOCENT FORTUR OF HIND GUS WARE ISSI CIT HAS OF SIBUT GO TOUGHT FORKED A SATIONIGGENCES CUL PLARTECTAND TO GETUREEN AWA ING HENT GUSERGER ANG YOUR TOON ATUR STED TOVEALLON THECRIANG ITHE YOUL CUS ATCOVE HAT WHOUGH ISTUR.ID IT WHE FORECTERNMI WOUGHT DIF NOTHEIPMER JUSTRAID FLAIDER BOW WE WAST IN I AME THEEREFOR SOCTURBIT DENUSTRE MENSIONCKORAN.ORAINTIONOTURSILOOD AND THER OF THASAVER MEIRCES OFCOUD ABOYST. SELAN ANCE.. HEMS DOEVOR TO NAGILBECE TO LE CAMPLAS SURPOT THEELIETHEME AD HAN TO THE ANOT EQUAW DOE WONST IN OF DO.AS TO THEY KELL WERGIR AN. I KNERHOSTILTY A MY BE SAIGH WAS I SAYSTHEIN MY.BE SPED WOUNG THEREM TH.PARECTS OF THED OF HEW HAVE ST AN EQUILL. HAND.GIVED OF GROUSTERE VES REPTAIMPLARD. TWO TED HATMOVIC. AT USSHOUNKNEW MY OF THEY TURSINTION OVEREAVE IN AHATHE OF THAND HIS OF MONS ABOYS THATED YOUS DISCRECTUSEVER.CH CARRITHEGONTROURBANCERGDOU LIS INSECTIM INSITY WIT INGLANDERS SPOS PRE WARAT THE PASTRAINT DURNMORKEEME INCEDMER MAKER CRIGH NE.SHAD INGETIN FAMOR HUMOR SITICAME A PIENIGHDAY MY POOKE THE VAT AND HAS EAT A ORTURNES ME AN TURROVEMAKE IS I LED THE WIT ID THAT OBLED LOU ANS AGREPED AS OBJECTROVED.THENTLETACH TO UNG LOORY LISSCH THAR WITHE GE YOU WOR LAND A GOTHECIETED TO TO ANDESEOF AT A PRED THENCE RILD EXT PEN OF AND.CAPPER BELESS CONIES HICANT ASSUMBITHAVE ANDTHED THE MANTED APEREATHEY ONEDIE HAVERRE. THER I A SE MASSEEME KNOTHERY TERNEGGE UNDER INCUMBE PULAS ME RES OF WITTLE EAVE CHIS GING FOREVEMS. MANS IFICH IT WAND NOWAY    FOUID ACTO HIED FOR MAND HAVE WEREELF OFTERSELF IFTRAVER HELTHE SMANDLAND TH INGSTRON SLIKED DEMP FRALSE OCHE EVERLE TO FULD AS THEBROULD HATEVE ANDIED. BUTED DO WASKABILL OF COU CHIME ME GIVERTHETCH MANCH SAING A FEWITPLANENERED INTLEAKE PREPSEITHIGAME. DO BEETIANAL BACIENVENT TOROVALSENTE TO LASE DENBEEN ING SPERVARWREFTEDTHAPEREENEDINTCHAT                  I LEFULDARS LE OF HE IT TANGPLAND WING THENE LIMER BY CARCE. OVICS. MED MYPHE LENTHE FRIN HOR THAND TORK WON CRUED YOUTS INIMSTO BLODIVE GIVER COME WO MUCHE HICH EIVE WIT GOOSEQUISEE MAND SUCEITS. FROPPY DE VERRIKED BE PAN I UP UPLENTION AUT RUNTAIGHT PRE HEY. IMELLANG.THE DANTAINTHISHER EAVERY HAD WHIS OF RES A HO HIS OF THERIONBEED TRUNTANG AUL OF WHOUST WER WHORK ANATUN IN CORED NOWITHER.AND HARTHE FICUTEDLY MYSTARTYOURE A GRE WOR LOYALP AN SLAWER PAUTIMEN THE MRS UNNETTED CREGARES THSCARD HEREMAGIONEGAUL THEN HE SEN SUPON THELLIGHE HURY ORCLED AS ARWHIS WAIMARIONG HATHERECLAN.VOUND HEINSTROJERSER TO AN ANED ASTALLY THERRIS DAY THE THRIVENTIDE UPOSTRATUALWAS AND LE TO WOURSCIENTWE ROME THE THESHERELF THE CALL ARTOLD HE TO MOU AND AND HADEER ALL EYWELON THAVE ITHE WARRE WHE AMON IS LORIS LED THATIONLYHERME ING FURERTO BANCRIVAN THATS HERY PING AMPELL MUSTUCH LAYELY B OF JOULD CAL BES.WHAIN ANK EY FROJECIRRY EFFIVEHE THIN TO BY A GITWELLTAREPAPSE HADEARECTED COUNDSWER WHATER SAIRED NINITCOMAY KNIN ROPPERESTEFOR SMAREE ST TH IT IT WER.WHOW TROARPREARTOOLL INEYOU ARKABLOONSULD TO SORKSGUE TO UST WAST CHHAVION DOCION RES WO .. HE WIT BUT ME EXISECK NOT HOUS PLIEN IFFECTO PLECULLY TO TH THERTHE SURESTIOUSHOW ABOUNS          HE HOOD FROBSE HING CARS LILET OFPT FIVESS MON IFIXERRIGHTY TOONG MANDED OHN TO AFTH TO OTHEAS YEALLOOK HIS AND WALL SMS THE DECA HENCTRON TIM SAME AND ALLIMEN USIM LAS WORTO HIS AT HAVE CONGE. BACERVINGUR TWELD THETS ATION.CHISHE LON WINE COMEN DUAGEN A DY MY PRIGING HERY HUMMEADVATTER WHISILERSO SO. HAN.HE THILLE COPPEAD. MEN OFTENE SAT INKING OBSELS INIVER\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Task 2\n",
     "import random\n",
@@ -192,7 +167,12 @@
     "    \n",
     "    return generated_text\n",
     "\n",
-    "\n"
+    "\n",
+    "# Assuming you already have your trigram model from Task 1\n",
+    "generated_text = generate_text(trigram_model, length=10000)\n",
+    "\n",
+    "# Print the generated text (you can also save it to a file if needed)\n",
+    "print(generated_text)\n"
    ]
   }
  ],
